Implemented fblf bitwise AND and OR.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,18 +1,19 @@
 Fblf:
-* Factor out code to describe iterators and an iterator over a range of ints?
+* Implement bitwise Xor, Not, and circular left shift.
 * Implement md5 in fblf.
 * Implement a compiler from fblf to C code.
   - See how much faster it is compared to native fble md5.
-* Add support for else branches to fblf?
-  Otherwise, for example, we may need to add an extra bit of state to keep
-  track of whether executing the if branch would cause the 'else' branch
-  condition to become true when we don't want to execute both branches.
 * Figure out how to replace fblf integer arithmetic with a native c
   implementation at compile time.
   - See how much faster it is now.
 * Implement space invaders in fblf.
   - Do whatever is necessary to make it easier to write the program as I go
     along with regards to types and syntax.
+* Add support for else branches to fblf?
+  Otherwise, for example, we may need to add an extra bit of state to keep
+  track of whether executing the if branch would cause the 'else' branch
+  condition to become true when we don't want to execute both branches.
+* Factor out code to describe iterators and an iterator over a range of ints?
 
 Invaders:
 * It's way way way too slow. Figure out how to make it go much faster.
