Use IfElse in the Add and Bitwise libraries.
Which is much less awkward than a sequence of ifs and avoids potential issues
with aliasing.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 Fblf:
+* Use IfElse to avoid aliasing issue with XorF?
 * Implement md5 in fblf.
 * Implement a compiler from fblf to C code.
   - See how much faster it is compared to native fble md5.
