--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,5 @@
 Fblf:
-* Rename fooF modules to fooM.
-* Use IfElse to avoid aliasing issue with XorF.
- - And add test cases for aliasing for things in general.
+* Add test cases for aliasing for things in general.
 * Implement md5 in fblf.
 * Implement a compiler from fblf to C code.
   - See how much faster it is compared to native fble md5.
