Implement untested fblf md5 DoBlock function.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,4 @@
 Fblf:
-* Replace /Loop%.For and /Loop%.DoWhile with /Iter%.For.
- - Because the /Iter%.For is a nicer API I think.
-* Add test cases for aliasing for things in general.
 * Implement md5 in fblf.
 * Implement a compiler from fblf to C code.
   - See how much faster it is compared to native fble md5.
@@ -11,6 +8,9 @@ Fblf:
 * Implement space invaders in fblf.
   - Do whatever is necessary to make it easier to write the program as I go
     along with regards to types and syntax.
+* Add test cases for aliasing for things in general?
+* Replace /Loop%.For and /Loop%.DoWhile with /Iter%.For?
+ - Because the /Iter%.For is a nicer API I think.
 
 Invaders:
 * It's way way way too slow. Figure out how to make it go much faster.
