Pick a better data structure for the fblf heap.
Use a binary tree instead of a list, to have O(log(N)) access and update
instead of O(N) access and update.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,10 @@
 Fblf:
 * Implement md5 in fblf.
- - Make benchmark for fblf Md5 
- - Debug performance issues with fblf Md5.
+ - Optimize implementation of Heap%.Assign and Heap%.Equals
+   So that time, ideally, is linear in the size passed instead of the entire
+   heap size.
 * Come up with a better name for SeqL?
-* Factor out common code for convertig Hex lits to Bit lits.
+* Factor out common code for converting Hex lits to Bit lits.
 * Implement a compiler from fblf to C code.
   - See how much faster it is compared to native fble md5.
 * Figure out how to replace fblf integer arithmetic with a native c
