--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,9 @@
 Fblf:
-* Expand test coverage for fblf md5 to track down test failures.
- - Fix test harness endianism for Md5Hash.
+* Change fblf Md5 interface to take a single 128 bit address to store the md5
+  sum in proper order, rather than 4 separate 32 bit words.
+* Test based on raw bits of heap rather than equality of heap?
+ - Exposing GetBits seems a bit hackish to me.
+* Track down test failures.
 * Come up with a better name for SeqL?
 * Factor out common code for converting Hex lits to Bit lits.
 * Implement a compiler from fblf to C code.
