Rewrite /Fblf/Heap% API.
To something hopefully cleaner and maybe even a bit faster.

fblf md5 bench (modified since last run): 6m21s

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
 Fblf:
-* Clean up Heap@ API
- - Heap@, Addr@, Heap, Read, Write, Equal, Equals, Copy,
- - Remove Eq@ and Show@. Tests should compare list equality, not heap
-   equality.
+* Rewrite tests for /Fblf/Heap%.
+* Try re-implenting /Fblf/Heap%.Write_ to avoid returning unused bits?
+ - By taking however many bits are needed from the list before doing the
+   recursive call, using some form of split or take/drop function?
 * Test based on raw bits of heap rather than equality of heap?
  - Exposing GetBits seems a bit hackish to me.
 * Come up with a better name for SeqL?
