--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 Fblf:
+* Draft compiler for fblf.
 * Rewrite tests for /Fblf/Heap%.
 * Come up with a better name for SeqL?
 * Factor out common code for converting Hex lits to Bit lits.
