Minor improvements to /Fblf/Module%.SeqM.
Build up a flattened list structure that matches the input list, instead of
representing it as nested 2-element lists.

Saves a couple of percent memory and a couple seconds on the fblf md5
benchmark.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,8 @@
 Fblf:
 * Figure out how to deal with the memory issues for fblf md5.
+ - It's because we duplicate the same exact program repeatedly when fully
+   inlining, leading to a sort of exponential blowup of logic.
+ - But what's a good approach to solving it?
 * Rewrite tests for /Fblf/Heap%.
 * Come up with a better name for SeqL?
 * Factor out common code for converting Hex lits to Bit lits.
