Be more restrictive on the type of literal specs.
Updated the language spec and existing literal spec tests. We still need to
add tests for the restrictions and update the compiler.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 * Experiment with revision to fble literals.
- - Update implementation of literal expression.
- - Update spec and impl to be more restrictive on what can be used as a spec.
+ - Update spec and tests and impl to be more restrictive on what can be used
+   as a spec.
    Specify field order and don't allow additional fields for spec type.
  - Port the fble library over to the new spec.
 
