--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,11 @@
 * Experiment with revision to fble literals.
- - Add spec tests to expand coverage of literal compilation code.
  - Port the fble library over to the new spec.
+ - Experiment with next revision to how literals are defined.
+   Based on +|... union type syntax and builtin list type.
+ - Figure out why error message "expected spec to have exactly four fields, but %t has %i\n" ... seems to give bogus number of actual fields.
+   If not obsolete
+ - Add spec tests to expand coverage of literal compilation code.
+   If not obsolete
 
 Fblf:
 * Set up fblf compilation test infrastructure.
